Fix a few errors, buy me a sake!

--- a/klondike.html
+++ b/klondike.html
@@ -802,7 +802,7 @@
 	<div id="content">
 		
 		<div id="leftsidebar" class="unselectable">
-			<a href="index.php">
+			<a href="index.html">
 			<img src="images/KardLandLogo.svg" width="128" height="96" id="logo" draggable="false">
 			</a>
 			<span id="new_button" class="pillbutton unselectable" onclick="new_button_click()" style="position:absolute; bottom:72px; left:26px; width:92px;">New Game</span>
@@ -810,9 +810,11 @@
 			<img src="images/info_scroll.svg" width="100" id="info_scroll" draggable="false">
 		</div>
 		
-		<!-- <div id="header">
-			<p class="account_verbage"><span id="welcome_block" style="display:none;">Welcome, Guest</span><span id="signin_block"><a href="#" id="sign_in_link">Sign In</a> | <a href="#" id="sign_up_link">Sign Up</a></span></p>
-		</div> -->
+		<div id="header">
+			<p class="buy_me_a_coffee">
+				Enjoy this ad-free game? <a href="https://ko-fi.com/engineersneedart">Buy me a <s>sake</s> coffee&hellip;</a>
+			</p>
+		</div>
 		
 		<div id="field" class="unselectable" style="background:url(images/KlondikeLabel.svg) bottom right no-repeat">
 		</div>
