--- a/freecell.html
+++ b/freecell.html
@@ -21,9 +21,11 @@
 		<img src="images/info_scroll.svg" width="100" id="info_scroll" draggable="false">
 	</div>
 	
-	<!-- <div id="header">
-		<p class="account_verbage"><span id="welcome_block" style="display:none;">Welcome, Guest</span><span id="signin_block"><a href="#" id="sign_in_link">Sign In</a> | <a href="#" id="sign_up_link">Sign Up</a></span></p>
-	</div> -->
+	<div id="header">
+		<p class="buy_me_a_coffee">
+			Enjoy this ad-free game? <a href="https://ko-fi.com/engineersneedart">Buy me a <s>sake</s> coffee&hellip;</a>
+		</p>
+	</div>
 	
 	<div id="field" class="unselectable" style="background:url(images/FreeCellLabel.svg) bottom right no-repeat">
 	</div>
