Our solitaire to my solitaire.

--- a/freecell.html
+++ b/freecell.html
@@ -64,7 +64,7 @@
 		<p class="modal_text" style="text-align:center;">FreeCell games played: <span class="modal_text" id="gameover_played">0</span></p>
 		<p class="modal_text" style="text-align:center;">FreeCell games won: <span class="modal_text" id="gameover_won">0</span></p>
 		<br>
-		<p class="modal_text">Thank you for visiting Kardland and playing our solitaire. I hope you are having fun.</p>
+		<p class="modal_text">Thank you for visiting Kardland and playing my solitaire. I hope you are having fun.</p>
 	</div>
 </div>
 
