--- a/klondike.html
+++ b/klondike.html
@@ -859,7 +859,7 @@
 			<p class="modal_text" style="text-align:center;">Klondike (3 card deal) games played: <span class="modal_text" id="gameover_played">0</span></p>
 			<p class="modal_text" style="text-align:center;">Klondike (3 card deal) games won: <span class="modal_text" id="gameover_won">0</span></p>
 			<br>
-			<p class="modal_text">Thank you for visiting Kardland and playing our solitaire. I hope you are having fun.</p>
+			<p class="modal_text">Thank you for visiting Kardland and playing my solitaire. I hope you are having fun.</p>
 		</div>
 	</div>
 	
